# arch-audit-gtk

./: Cargo.toml
src/: gui.rs  updater.rs
