[package]
authors = ["kpcyrd <git@rxv.cc>"]
description = "Arch Linux Security Update Notifications"
edition = "2021"
license = "GPL-3.0"
name = "arch-audit-gtk"
repository = "https://github.com/kpcyrd/arch-audit-gtk"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arch-audit = "0.1"
dirs-next = "2"
env_logger = "0"
glib = "0"
gtk = "0"
humantime = "2"
inotify = "0"
libappindicator = "0"
log = "0"
opener = "0"
rand = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0"
toml = "0"

[patch.crates-io]
arch-audit = {path = "../arch-audit"}
